[package]
name = "wismut"
version = "0.1.0"
authors = ["bismuth-party"]
description = "Telegram group statistics bot"

[dependencies]
clap = "2.32.0"
futures = "0.1.23"
reqwest = "0.8.7"
serde_json = "1.0.24"
telegram-bot = { git = "https://github.com/bismuth-party/telegram-bot" }
tokio-core = "0.1.1"
toml = "0.4"
regex = "1.0.2"
lazy_static = "1.1.0"
