[package]
name = "wismut"
version = "0.1.0"
authors = ["bismuth-party"]
description = "Telegram group statistics bot"

[dependencies]
clap = "2.32.0"
futures = "0.1.23"
reqwest = "0.8.7"
serde = "1.0.26"
serde_derive = "1.0.26"
serde_json = "1.0.26"
telegram-bot = { git = "https://github.com/bismuth-party/telegram-bot" }
tokio-core = "0.1.17"
toml = "0.4.6"
regex = "1.0.2"
lazy_static = "1.1.0"
